# ss13-status-3ds

./: Cargo.toml  config.example.toml  rust-toolchain.toml  test.py
src/: colors.rs  config.rs  main.rs  status.rs  topic.rs
