[package]
name = "ss13-status-3ds"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Absolucy/ss13-status-3ds"

[dependencies]
anyhow = "1"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
humantime = "2"

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
