[package]
name = "ss13-status-3ds"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Absolucy/ss13-status-3ds"

[dependencies]
anyhow = "1"
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
toml = { version = "1", features = ["serde"] }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"

[profile.release]
opt-level = 3
lto = "thin"
